--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             </ul>
          </nav>
          <div id="container">
+             <h3>Pick what color is the rgb value above</h3>
              <div class="colors" id="colorone"></div>
              <div class="colors" id="colortwo"></div>
              <div class="colors" id="colorthree"></div>
@@ -21,7 +22,7 @@
              <div class="colors" id="colorfive"></div>
              <div class="colors" id="colorsix"></div>
              <p id="clicker">Play Again</p>
-             <p>Start</p>
+             <p id="start">Start</p>
          </div>
         <script src="app.js"></script>
     </body>
